# Second_Course

Second_Blocks/: CMakeLists.txt  main.cpp
Second_BuildExpression/: CMakeLists.txt  main.cpp  tmp
Second_Decomp/: CMakeLists.txt  main.cpp
Second_Decompositon_2/: CMakeLists.txt  Second_Decompositon_2.rar  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
Second_Demographic/: CMakeLists.txt  main.cpp
Second_Figures/: CMakeLists.txt  main.cpp
Second_FinalProject/: CMakeLists.txt  Second_FinalProject.rar  Tests.h  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test.txt  test_runner.cpp  test_runner.h
Second_FindGreaterElements/: CMakeLists.txt  main.cpp
Second_FindNearestElement/: CMakeLists.txt  main.cpp
Second_FindStartsWith/: CMakeLists.txt  main.cpp
Second_Framework_Test2/: CMakeLists.txt  main.cpp
Second_Framework_Test3/: CMakeLists.txt  main.cpp
Second_Framework_Test4/: CMakeLists.txt  main.cpp  test_runner.h
Second_Framework_test1/: CMakeLists.txt  main.cpp
Second_GetReference/: CMakeLists.txt  main.cpp
Second_Inheritance/: CMakeLists.txt  main.cpp
Second_Inotifier/: CMakeLists.txt  main.cpp
Second_Matrix/: CMakeLists.txt  main.cpp
Second_MergeSort/: CMakeLists.txt
Second_Phone_number/: CMakeLists.txt  main.cpp  phone_number.cpp  test_runner.h
Second_PrintVectorPart/: CMakeLists.txt  main.cpp
Second_Rectangle/: CMakeLists.txt  main.cpp  rectangle.h
Second_Refactor/: CMakeLists.txt  main.cpp
(+20 files in other folders)
